hphp/hack/test/typecheck/new_inference/disjunctions/generics_sub_nullable_tvar.php.exp
ERROR: File "generics_sub_nullable_tvar.php", line 11, characters 5-6:
Invalid argument (Typing[4323])
  File "generics_sub_nullable_tvar.php", line 4, characters 12-13:
  `T1` is a constrained type parameter
  File "generics_sub_nullable_tvar.php", line 4, characters 18-23:
  This type constraint is violated
  File "generics_sub_nullable_tvar.php", line 4, characters 18-23:
  Expected `string`
  File "generics_sub_nullable_tvar.php", line 10, characters 22-25:
  But got `?int`
ERROR: File "generics_sub_nullable_tvar.php", line 11, characters 5-6:
Invalid argument (Typing[4323])
  File "generics_sub_nullable_tvar.php", line 4, characters 12-13:
  `T1` is a constrained type parameter
  File "generics_sub_nullable_tvar.php", line 4, characters 18-23:
  This type constraint is violated
  File "generics_sub_nullable_tvar.php", line 4, characters 18-23:
  Expected `string`
  File "generics_sub_nullable_tvar.php", line 10, characters 23-25:
  But got `int`
ERROR: File "generics_sub_nullable_tvar.php", line 11, characters 5-6:
Invalid argument (Typing[4323])
  File "generics_sub_nullable_tvar.php", line 4, characters 12-13:
  `T1` is a constrained type parameter
  File "generics_sub_nullable_tvar.php", line 4, characters 18-23:
  This type constraint is violated
  File "generics_sub_nullable_tvar.php", line 4, characters 18-23:
  Expected `string`
  File "generics_sub_nullable_tvar.php", line 10, characters 28-29:
  But got `T2 as ?int`
ERROR: File "generics_sub_nullable_tvar.php", line 11, characters 5-6:
Invalid argument (Typing[4110])
  File "generics_sub_nullable_tvar.php", line 4, characters 26-28:
  Expected `null` or something of type `string`
  File "generics_sub_nullable_tvar.php", line 10, characters 28-29:
  But got `T2 as ?int`
